# libopenshot-audio

./: .gitignore  .travis.yml  CMakeLists.txt  Config.cmake.in  INSTALL.md  OpenShotAudioConfig.cmake.in  README.md  appveyor.yml  libopenshot-audio.nuspec  libopenshot-audio.nuspec.in  libopenshot-audio.pc.in  org.openshot.libopenshot-audio.nuspec.in
.github/workflows/: ci-daily.yml  ci.yml  linux-ci.yml  macos-ci.yml  windows-ci.yml
cmake/: Config.cmake.in
cmake/Modules/: FindASIO.cmake  UseDoxygen.cmake
doc/: INSTALL-LINUX.md  INSTALL-MAC.md  INSTALL-WINDOWS.md  openshotaudio-demo.1  process_source_files.py
include/: AppConfig.h.in  OpenShotAudio.h.in
src/: CMakeLists.txt  Demo.cpp  Main.cpp
